k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ziontechgroup
  labels:
    name: ziontechgroup
