k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ziontechgroup-ingress
  namespace: ziontechgroup
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - ziontechgroup.com
        - www.ziontechgroup.com
      secretName: ziontechgroup-tls
  rules:
    - host: ziontechgroup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ziontechgroup-service
                port:
                  number: 80
